# libtq

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  speccraft.yaml
cmake/: toolchain-harmony.cmake  toolchain-ios.cmake  tq-config.cmake.in
specs/: enable_test.yaml  ios_toolchains.yaml  is_static.yaml  win_toolchains.yaml
src/: CMakeLists.txt  event_queue.h  libtq.h  rwlock.cc  rwlock.h  speccraft.yaml  task.h  task_event_queue.h  task_queue.cc  task_queue.h  task_queue_manager.cc  task_queue_manager.h  task_rwlock.cc  task_rwlock.h  task_thread.cc  task_thread.h  task_thread_posix.cc  task_thread_win.cc  task_threadsafe.h  task_timer.cc  task_timer.h  task_worker.cc  task_worker.h  task_worker_group.cc  task_worker_group.h  threadsafe.h  timer.cc  timer.h  worker.cc  worker.h  worker_group.cc  worker_group.h
test/: CMakeLists.txt  event_queue_unittest.cc  speccraft.yaml  task_queue_unittest.cc  timer_unittest.cc  worker_group_unittest.cc  worker_unittest.cc
